--- a/package.json
+++ b/package.json
@@ -2,6 +2,25 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
-  }
+    "express": "^4.18.1",
+    "mongoose": "^6.5.0"
+  },
+  "name": "secrets",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/divyachandrapandi/Secrets.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/divyachandrapandi/Secrets/issues"
+  },
+  "homepage": "https://github.com/divyachandrapandi/Secrets#readme",
+  "description": ""
 }
